<resources>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email:</string>
    <string name="cards">Cards</string>
    <string name="last_cards">Last Cards</string>
    <string name="settings_title">Settings</string>
    <string name="security">Security</string>
    <string name="devices">Devices</string>
    <string name="theme">Theme</string>
    <string name="kill_current">Kill current</string>
    <string name="kill_others">Kill others</string>
</resources>